scripts/nullaway/wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8.txt
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Logger.java:47: error: [NullAway] passing @Nullable parameter 'args' where @NonNull is required
        log(Level.INFO, format, args);
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Inspector.java:80: error: [NullAway] dereferenced expression incompatibleOption is @Nullable
                logError("Options %s and %s can not be used together", usedOption.name(), incompatibleOption.name());
                                                                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Inspector.java:94: error: [NullAway] dereferenced expression useOnlyWithOption is @Nullable
                logError("Option %s can be used only with option %s", usedOption.name(), useOnlyWithOption.name());
                                                                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Configurator.java:149: error: [NullAway] dereferenced expression value is @Nullable
            ConfException.wrap(ex, FORMAT_SET_FIELD_NOT_POSSIBLE, field.getName(), value.toString());
                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Configurator.java:171: error: [NullAway] dereferenced expression klass is @Nullable
        if (klass.isArray()) {
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:246: error: [NullAway] dereferenced expression type is @Nullable
        if (type.isEnum()) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:392: error: [NullAway] dereferenced expression type is @Nullable
        Object[] enumConstants = type.getEnumConstants();
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:446: error: [NullAway] dereferenced expression accessible is @Nullable
        return accessible.getAnnotation(Constraint.class);
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:475: error: [NullAway] dereferenced expression type is @Nullable
        return type.getMethod(methodName, paramType);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ReflectUtils.java:524: error: [NullAway] dereferenced expression klass is @Nullable
        if (klass.isArray()) {
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/FactoryRegistry.java:104: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return type;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Parser.java:422: error: [NullAway] dereferenced expression token is @Nullable
        boolean isOptionTerminator = token.equals(OptionUtils.OPTION_LIST_TERMINATOR);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ConstraintUtils.java:390: error: [NullAway] dereferenced expression type is @Nullable
            Logger.fine("Cannot invoke static compare(x,y) for type %s", type.getName());
                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ConstraintUtils.java:400: error: [NullAway] dereferenced expression type is @Nullable
            Logger.fine("Cannot invoke compareTo for type %s", type.getName());
                                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ConstraintUtils.java:403: error: [NullAway] dereferenced expression type is @Nullable
        throw new ConfException(cause, "Cannot compare type %s", type.getName());
                                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ConstraintUtils.java:418: error: [NullAway] passing @Nullable parameter 'args' where @NonNull is required
        severe(format, args);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/ConstraintUtils.java:419: error: [NullAway] passing @Nullable parameter 'args' where @NonNull is required
        throw new CheckException(format, args);
                                         ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url8752fbdeb0_sixtam_args_tgz-pJ8-cz_mff_dpp_args_examples_ConstraintTestJ8/src/cz/mff/dpp/args/Configurator.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
